--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/KannanVS/katas-nodejs/issues"
   },
-  "homepage": "https://github.com/KannanVS/katas-nodejs#readme"
+  "homepage": "https://github.com/KannanVS/katas-nodejs#readme",
+  "dependencies": {
+    "JSONStream": "^1.3.5"
+  }
 }
